--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,21 @@ jobs:
       - name: '运行同步'
         run: |
           git clone -b develop https://github.com/ClassmateLin/Python-Interview-Questions.git py
+          if [ -x py ]; then
+           echo "克隆成功"
+           else 
+           echo "克隆失败"
+           git clone -b master https://github.com/wudongdefeng/jd_py.git py
+          fi
           cp -r py/*.py /home/runner/work/jd_py/jd_py
           cp -r py/utils/*.* /home/runner/work/jd_py/jd_py/utils
-          cp /home/runner/work/jd_py/jd_py/db/model1.py /home/runner/work/jd_py/jd_py/db/model.py
+          
           cp -r py/db/*.* /home/runner/work/jd_py/jd_py/db
           
           cp -r py/tools/*.* /home/runner/work/jd_py/jd_py/tools
           cp /home/runner/work/jd_py/jd_py/config1.py /home/runner/work/jd_py/jd_py/config.py
           rm -rf py
+          #cp /home/runner/work/jd_py/jd_py/db/model1.py /home/runner/work/jd_py/jd_py/db/model.py
           #cp /home/runner/work/jd_py/jd_py/utils/process1.py /home/runner/work/jd_py/jd_py/utils/process.py
           #cp /home/runner/work/jd_py/jd_py/utils/cookie1.py /home/runner/work/jd_py/jd_py/utils/cookie.py
           
