--- a/.github/workflows/jd_travels.yml
+++ b/.github/workflows/jd_travels.yml
@@ -28,16 +28,16 @@ jobs:
                   
           - name: run
             run: |             
-             sed -i "15c/${{ secrets.JD_COOKIE1 }}" ./config1.yaml
-             sed -i "16c/${{ secrets.JD_COOKIE2 }}" ./config1.yaml
-             sed -i "17c/${{ secrets.JD_COOKIE3 }}" ./config1.yaml
-             sed -i "18c/${{ secrets.JD_COOKIE4 }}" ./config1.yaml
-             sed -i "19c/${{ secrets.JD_COOKIE5 }}" ./config1.yaml
+             sed -i "15c/${{ secrets.JD_COOKIE1 }}" ./config.yaml
+             sed -i "16c/${{ secrets.JD_COOKIE2 }}" ./config.yaml
+             sed -i "17c/${{ secrets.JD_COOKIE3 }}" ./config.yaml
+             sed -i "18c/${{ secrets.JD_COOKIE4 }}" ./config.yaml
+             sed -i "19c/${{ secrets.JD_COOKIE5 }}" ./config.yaml
              sed -i "15,19s/^/  - /g" ./config1.yaml
-             sed -i "s/aaa/${{ secrets.TG_BOT_TOKEN }}/g" ./config1.yaml
-             sed -i "s/bbb/${{ secrets.TG_USER_ID }}/g" ./config1.yaml
+             sed -i "s/aaa/${{ secrets.TG_BOT_TOKEN }}/g" ./config.yaml
+             sed -i "s/bbb/${{ secrets.TG_USER_ID }}/g" ./config.yaml
              sed -i "s/weixin/${{ secrets.WECHAT_WORK }}/g" ./config1.yaml
              sed -i "s/default=0/default=1/g" ./db/model.py
              mkdir conf 
-             mv ./config1.yaml ./conf/config1.yaml        
+             mv ./config.yaml ./conf/config.yaml        
              python3 jd_travels.py                 
