--- a/.github/workflows/jd_travels.yml
+++ b/.github/workflows/jd_travels.yml
@@ -33,10 +33,10 @@ jobs:
              sed -i "17c/${{ secrets.JD_COOKIE3 }}" ./config.yaml
              sed -i "18c/${{ secrets.JD_COOKIE4 }}" ./config.yaml
              sed -i "19c/${{ secrets.JD_COOKIE5 }}" ./config.yaml
-             sed -i "15,19s/^/  - /g" ./config1.yaml
+             sed -i "15,19s/^/  - /g" ./config.yaml
              sed -i "s/aaa/${{ secrets.TG_BOT_TOKEN }}/g" ./config.yaml
              sed -i "s/bbb/${{ secrets.TG_USER_ID }}/g" ./config.yaml
-             sed -i "s/weixin/${{ secrets.WECHAT_WORK }}/g" ./config1.yaml
+             sed -i "s/weixin/${{ secrets.WECHAT_WORK }}/g" ./config.yaml
              sed -i "s/default=0/default=1/g" ./db/model.py
              mkdir conf 
              mv ./config.yaml ./conf/config.yaml        
