--- a/.github/workflows/jd_travels.yml
+++ b/.github/workflows/jd_travels.yml
@@ -3,7 +3,7 @@ name: jd_travels
 on:
     workflow_dispatch:
     schedule:
-        - cron: "25 8 * * *"
+        - cron: "25 0-23/3 * * *"
     watch:
         types: [started]
     repository_dispatch:
