--- a/.github/workflows/jd_travels.yml
+++ b/.github/workflows/jd_travels.yml
@@ -28,12 +28,10 @@ jobs:
                   
           - name: run
             run: |             
-             sed -i "15c/${{ secrets.JD_COOKIE1 }}" ./config.yaml
-             sed -i "16c/${{ secrets.JD_COOKIE2 }}" ./config.yaml
-             sed -i "17c/${{ secrets.JD_COOKIE3 }}" ./config.yaml
-             sed -i "18c/${{ secrets.JD_COOKIE4 }}" ./config.yaml
-             sed -i "19c/${{ secrets.JD_COOKIE5 }}" ./config.yaml
-             sed -i "15,19s/^/  - /g" ./config.yaml
+            sed -i -e '/pt/d' ./config.yaml
+             sed -i "15c${{ secrets.TEST_COOKIE }}" ./config.yaml
+             sed 's/&/\n/g' ./config.yaml
+             sed -i "/pt/s/^/  - /g" ./config.yaml
              sed -i "s/aaa/${{ secrets.TG_BOT_TOKEN }}/g" ./config.yaml
              sed -i "s/bbb/${{ secrets.TG_USER_ID }}/g" ./config.yaml
              sed -i "s/weixin/${{ secrets.WECHAT_WORK }}/g" ./config.yaml
